# apps/api/routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\LearningMaterialController;
 use App\Http\Controllers\LearningSessionController;
 use App\Http\Controllers\PanoramaNodeController;
 use App\Http\Controllers\PanoramaVisitController;
+use App\Http\Controllers\QuizController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/v1/health', fn () => [
@@ -19,6 +20,7 @@ Route::prefix('v1')->group(function () {
     Route::get('/heritage-sites/{slug}/areas', [HeritageSiteController::class, 'areas']);
     Route::get('/panorama-nodes/{id}', [PanoramaNodeController::class, 'show']);
     Route::get('/heritage-objects/{id}/learning-material', [LearningMaterialController::class, 'show']);
+    Route::get('/quizzes/{id}', [QuizController::class, 'show']);
 
     Route::post('/auth/login', [AuthController::class, 'login']);
 
